--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,27 @@
         </activity>
 
         <activity android:name=".demo1.Demo1Activity" />
+        <!---->
         <activity android:name=".demo2.Demo2Activity" />
+        <!---->
         <activity android:name=".demo3.Demo3Activity" />
+        <!---->
         <activity android:name=".demo4.Demo4Activity" />
         <activity android:name=".demo4.Demo4Activity1" />
         <activity android:name=".demo4.Demo4Activity2" />
         <activity android:name=".demo4.Demo4Activity3" />
         <activity android:name=".demo4.Demo4Activity4" />
         <activity android:name=".demo4.Demo4Activity5" />
-
+        <activity android:name=".demo4.Demo4Activity6" />
+        <activity android:name=".demo4.Demo4Activity7" />
+        <!---->
         <activity android:name=".demo5.Demo5Activity" />
+        <!---->
         <activity android:name=".demo6.Demo6Activity" />
+        <activity android:name=".demo6.Demo6Activity1" />
+        <activity android:name=".demo6.Demo6Activity2" />
+        <activity android:name=".demo6.Demo6Activity3" />
+        <activity android:name=".demo6.Demo6Activity4" />
     </application>
 
 </manifest>
